--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "bcrypt": "^5.1.1",
     "luxon": "^3.5.0",
     "pg": "^8.13.0",
+    "openapi-types": "12.1.3",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
